trunk/leaf/leaf_group_02/TTP/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ttp-prod
  labels:
    name: ttp-prod
    environment: production
    app: ttp
